--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.2.0",
   "description": "typescript concurrency",
   "author": "xpwu",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "index.ts",
+  "browser": "dist/umd/index.js",
   "dependencies": {
-    "ts-xutils": "https://github.com/xpwu/ts-xutils#semver:~0.2.0"
+    "ts-xutils": "https://github.com/langgexyz/ts-xutils#semver:^0.4.0"
   },
   "devDependencies": {
     "@types/jest": "28.1.3",
@@ -13,6 +17,11 @@
     "typescript": "4.7.4"
   },
   "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.json",
+    "build:umd": "tsc -p tsconfig.umd.json",
     "tsc": "tsc",
     "test": "jest"
   },
@@ -24,12 +33,13 @@
   ],
   "license": "MIT",
   "files": [
+    "dist",
     "src",
     "index.ts"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/xpwu/ts-concurrency.git"
+    "url": "https://github.com/langgexyz/ts-concurrency.git"
   },
   "jest": {
     "preset": "ts-jest",
