--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-concurrency",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
