--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-concurrency",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
@@ -8,7 +8,7 @@
   "types": "dist/types/index.d.ts",
   "browser": "dist/umd/index.js",
   "dependencies": {
-    "ts-xutils": "file:../ts-xutils"
+    "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0-alpha.12"
   },
   "devDependencies": {
     "@types/jest": "28.1.3",
