--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
+  "_ai_rules": {
+    "github_dependencies": {
+      "langgexyz/*": {
+        "version_pattern": "semver:\\^[1-9][0-9]*\\.[0-9]+\\.[0-9]+$",
+        "forbidden_patterns": [
+          "semver:\\^[0-9]+\\.[0-9]+\\.[0-9]+-[a-zA-Z]",
+          "semver:\\^[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+"
+        ],
+        "description": "package.json 中只能使用稳定版本范围，如 ^1.0.0，禁止直接写预发布版本如 ^1.0.0-alpha.4"
+      }
+    }
+  },
   "name": "ts-concurrency",
-  "version": "1.0.0-alpha.10",
+  "version": "1.0.0",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
@@ -8,7 +20,7 @@
   "types": "dist/types/index.d.ts",
   "browser": "dist/umd/index.js",
   "dependencies": {
-    "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0-alpha.12"
+    "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "28.1.3",
