--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "name": "ts-concurrency",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
