--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "outDir": "dist/cjs",
     "declaration": false,
-    "declarationMap": false
+    "declarationMap": false,
+    "skipLibCheck": true
   }
 }
