--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
   "browser": "dist/umd/index.js",
-  "dependencies": {
-    "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "28.1.3",
     "@types/node": "^20.0.0",
