--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     }
   },
   "name": "ts-concurrency",
-  "version": "1.0.1-alpha.3",
+  "version": "1.0.1-alpha.1",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
   "browser": "dist/umd/index.js",
-  "dependencies": {},
+  "dependencies": {
+    "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0"
+  },
   "devDependencies": {
     "@types/jest": "28.1.3",
     "@types/node": "^20.0.0",
