--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -4,7 +4,6 @@
     "module": "CommonJS",
     "outDir": "dist/cjs",
     "declaration": false,
-    "declarationMap": false,
-    "skipLibCheck": true
+    "declarationMap": false
   }
 }
