--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     }
   },
   "name": "ts-concurrency",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "typescript concurrency",
   "author": "xpwu",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
-  "browser": "dist/umd/index.js",
   "dependencies": {
     "ts-xutils": "github:langgexyz/ts-xutils#semver:^1.0.0"
   },
@@ -30,11 +29,12 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "build": "npm run build:cjs && npm run build:esm && npm run build:umd && npm run build:types",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+    "prebuild": "npm run clean",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.json",
-    "build:umd": "tsc -p tsconfig.umd.json",
     "build:types": "tsc -p tsconfig.types.json",
+    "clean": "rm -rf dist",
     "tsc": "tsc",
     "test": "jest",
     "publishalpha": "NEXT_VERSION=$(node -e \"const pkg=require('./package.json'); const ver=pkg.version; const match=ver.match(/^(\\d+\\.\\d+\\.\\d+)-alpha\\.(\\d+)$/); if(match) { console.log(match[1] + '-alpha.' + (parseInt(match[2])+1)); } else { console.log(ver.replace(/^(\\d+\\.\\d+\\.\\d+).*$/, '$1-alpha.1')); }\") && npm version $NEXT_VERSION && git add . && git commit -m \"chore: release $NEXT_VERSION\" && git tag v$NEXT_VERSION && git push origin master && git push origin v$NEXT_VERSION"
